<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.ListarPuntos">

    <TableLayout
        android:id="@+id/tblPuntos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:touchscreenBlocksFocus="true">

            <TextView
                android:id="@+id/lblId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/lblPuntosTabla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punto" />

            <TextView
                android:id="@+id/lblTotalTabla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
