<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.registrarAyuda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtLlaveAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/digite"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/abrigo" />

            <TextView
                android:id="@+id/lblAbrigoRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.89"
                android:text="0"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bloquador" />

            <TextView
                android:id="@+id/lblBloqueadorRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.06"
                android:text="0"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.51"
                android:text="@string/kitM" />

            <TextView
                android:id="@+id/lblKitRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:layout_weight="0.53" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repelente" />

            <TextView
                android:id="@+id/lblRepelenteRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.02"
                android:text="0"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total2" />

            <TextView
                android:id="@+id/lblAyudaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.23"
                android:text="0"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegistroAyuda"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarAyudas"
            android:text="@string/registrar" />
    </LinearLayout>
</RelativeLayout>
