<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.Guatape">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                app:srcCompat="@drawable/guatape" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.63"
                    android:fontFamily="casual"
                    android:text="@string/guatape"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="29dp"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="181dp"
                    android:layout_marginLeft="91dp"
                    android:layout_marginStart="91dp"
                    app:srcCompat="@drawable/ubicacion"
                    android:onClick="mostrar_mapa"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.29"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:fontFamily="casual"
                    android:text="@string/guatapeintro"
                    android:textAlignment="center"
                    android:textColor="@android:drawable/alert_dark_frame" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/hoteles"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    android:layout_weight="0.76" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="241dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/gua"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/comida"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_weight="0.06" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="57dp"
                    android:layout_height="62dp"
                    android:layout_weight="0.52"
                    android:fontFamily="casual"
                    android:text="@string/comidaT"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="67dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.03"
                    android:fontFamily="casual"
                    android:text="@string/quehacer"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/queh"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
