<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.RegistroCiudades">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/regitro"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnDepartamentosRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08" />

        <EditText
            android:id="@+id/txtCiudadRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingreso"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrar"
            android:text="@string/registrar" />
    </LinearLayout>
</RelativeLayout>
