<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.RegistrarPuntuacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/txtLlave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Llave"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/puntuacion"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblPuntuacionRegistro"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblTotalRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAgregarNuevaP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarPuntos"
            android:text="@string/agregarNP" />

    </LinearLayout>
</RelativeLayout>
