<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.Popayan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/puntua"
            android:textAlignment="viewStart"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:verticalScrollbarPosition="right">

            <RadioButton
                android:id="@+id/r5Popayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5" />

            <RadioButton
                android:id="@+id/r4Popayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.54"
                android:text="4" />

            <RadioButton
                android:id="@+id/r3Popayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="3" />

            <RadioButton
                android:id="@+id/r2Popayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2" />

            <RadioButton
                android:id="@+id/r1Popayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="1" />
        </RadioGroup>

        <Button
            android:id="@+id/btnEnviarPopayan"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="puntuar"
            android:text="@string/enviar" />

        <TextView
            android:id="@+id/lblPuntuacionPopayan"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ayuda"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbxAbrigoPopayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/abrigo" />

            <CheckBox
                android:id="@+id/cbxBloqueadorPopayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bloquador" />

            <CheckBox
                android:id="@+id/cbxKitPopayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kitM" />

            <CheckBox
                android:id="@+id/cbxRepelentePopayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repelente" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblAbrigoPopayan"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblBloqueadorPopayan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblKitPopayan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblRepelentePopayan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEnviar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ayuda"
            android:text="@string/enviar" />

    </LinearLayout>

</RelativeLayout>
